first deploy with djangon in backend

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
     <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet">
  
     <!-- logo -->
-   <link rel="icon" href="{% static 'img/logo.png '%}">
+   <link rel="icon" href="{% static 'img/logo2.png '%}">
   
       <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
